[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
dicom = "0.5.4"
dicom-pixeldata = { version = "0.1.5"}
image = "0.24.5"
base64 = "0.13"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
